Fixed popup spacing css

--- a/app/public/css/easter.css
+++ b/app/public/css/easter.css
@@ -1,25 +1,3 @@
-#easterEgg {
-    display: none;
-    width: 100px;
-    height: 30px;
-    position: fixed;
-    left: -10%;
-    bottom: -10px;
-    padding: 0.25rem 1rem;
-    text-align: center;
-
-    border: 2px solid #ff481f;
-    border-radius: 10px;
-    border-bottom: none;
-
-    cursor: pointer;
-}
-
-#easterEgg a {
-    text-decoration: none;
-    color: black;
-}
-
 #wrong-word {
     position: fixed;
     z-index: 1;
@@ -39,7 +17,7 @@
     border-radius: 0.5rem;
     text-align: center;
     width: 300px;
-    height: 120px;
+    height: 140px;
     background-color: white;
     margin: 35vh auto;
 }
@@ -51,4 +29,23 @@
 
 .okayBtn {
     margin-top: 0.5rem;
+}
+
+h4 {
+    margin-top: 1rem;
+    font-weight: 400;
+    text-align: center;
+}
+
+.content .form {
+    padding-top: 2rem;
+}
+
+.content .input, select {
+    width: 100%;
+}
+
+.content button {
+    margin-top: 1rem;
+    width: 100%;
 }
